gui fix v1
